--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "email": "email dev",
+    "email": "node email dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kshitij",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.6",
+    "@arcjet/node": "^1.0.0-beta.6",
+    "@google/generative-ai": "^0.24.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -19,8 +22,8 @@
     "inngest": "^3.35.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "node-cron": "^3.0.3",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
-    "resend": "^4.4.0"
+    "resend": "^4.4.1"
   }
 }
